libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/index-3.jsonc
//@ run: fail
//@ description: index/3 should not compile
[
  "::kernel::special_form::index",
  "x",
  "y",
  "z"
  //~^ ERROR unexpected argument
]
